# simple-snake

./: CMakeLists.txt  README.MD  Snake.cpp  Snake.h  Window.cpp  Window.h  constants.h  main.cpp
